<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.AddComponentActivity"
    android:padding="10sp">

    <TextView
        android:id="@+id/add_new_component1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_component"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <EditText
        android:id="@+id/comp_name"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/name"
        android:inputType="text"
        android:background="@drawable/border_edittext"
        android:autofillHints="name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_new_component1"
        app:layout_constraintVertical_bias="0.05"
        android:padding="10sp"/>

    <EditText
        android:id="@+id/comp_model"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/model"
        android:inputType="text"
        android:background="@drawable/border_edittext"
        android:autofillHints="name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comp_name"
        app:layout_constraintVertical_bias="0.05"
        android:padding="10sp"/>

    <EditText
        android:id="@+id/comp_quantity"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/quantity"
        android:background="@drawable/border_edittext"
        android:padding="10sp"
        android:inputType="number"
        android:autofillHints=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comp_model"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        />

    <EditText
        android:id="@+id/comp_price"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/price_inr"
        android:background="@drawable/border_edittext"
        android:padding="10sp"
        android:inputType="number"
        android:autofillHints=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comp_quantity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quality"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comp_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:layout_constraintHorizontal_bias="0.05"
        />

    <Spinner
        android:id="@+id/qualitySpinner"
        android:layout_width="240sp"
        android:layout_height="50sp"
        android:background="@drawable/border_edittext"
        android:entries="@array/quality_options"
        app:layout_constraintLeft_toRightOf="@id/textview1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comp_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:padding="10sp"/>

    <EditText
        android:id="@+id/comp_category"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/category"
        android:background="@drawable/border_edittext"
        android:padding="10sp"
        android:inputType="text"
        android:autofillHints="name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qualitySpinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        />

    <Button
        android:id="@+id/image_select_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comp_category"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.2"
        android:onClick="selectImage" />

    <ImageView
        android:id="@+id/selected_comp_image"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:src="@drawable/common_google_signin_btn_icon_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comp_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintVertical_bias="0.1"
        android:contentDescription="@string/add_new_component"
        />

    <Button
        android:id="@+id/save_and_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_and_continue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comp_category"
        app:layout_constraintVertical_bias="1"
        android:onClick="saveAndContinue"/>

</androidx.constraintlayout.widget.ConstraintLayout>