<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignUpActivity"
    android:padding="10sp">

    <TextView
        android:id="@+id/register_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        />

    <EditText
        android:id="@+id/sign_username"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/username"
        android:gravity="center"
        android:background="@drawable/border_edittext"
        android:inputType="text"
        android:autofillHints="username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <EditText
        android:id="@+id/mobile_no"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/mobile_no"
        android:gravity="center"
        android:background="@drawable/border_edittext"
        android:inputType="phone"
        android:autofillHints="phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <EditText
        android:id="@+id/email_id"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/e_mail_id"
        android:gravity="center"
        android:background="@drawable/border_edittext"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobile_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <EditText
        android:id="@+id/sign_password"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/password"
        android:gravity="center"
        android:background="@drawable/border_edittext"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/confirm_password"
        android:gravity="center"
        android:background="@drawable/border_edittext"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sign_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/baseline_login_24"
        app:backgroundTint="#EA1A1A"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:layout_constraintBottom_toTopOf="@id/sign_register_user_button"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintHorizontal_bias="0.95"
        android:contentDescription="@string/register_user"
        android:onClick="login"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sign_register_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/baseline_person_add_24"
        app:backgroundTint="#EA1A1A"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintHorizontal_bias="0.95"
        android:contentDescription="@string/register_user"
        android:onClick="register"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sign_toggle_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/baseline_key_off_24"
        app:backgroundTint="#FFFFFF"
        tools:layout_editor_absoluteX="328dp"
        tools:layout_editor_absoluteY="379dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.95"
        android:contentDescription="@string/show_password"
        android:onClick="toggle"/>

</androidx.constraintlayout.widget.ConstraintLayout>