<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginActivity"
    android:padding="10sp">

    <TextView
        android:id="@+id/login_to_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/login_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/baseline_login_24"
        app:backgroundTint="#E60808"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/login_to_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintVertical_bias="0"
        android:contentDescription="@string/login_to_continue"
        android:onClick="login"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sign_up_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/baseline_person_add_24"
        app:backgroundTint="#EC1818"
        app:layout_constraintTop_toBottomOf="@id/login_floating_button"
        app:layout_constraintLeft_toRightOf="@id/login_to_continue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintVertical_bias="0.02"
        android:contentDescription="@string/login_to_continue"
        android:onClick="signup"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/username"
        android:gravity="center"
        android:textSize="20sp"
        android:autofillHints="username"
        android:inputType="text"
        android:background="@drawable/border_edittext"
        app:layout_constraintTop_toBottomOf="@id/sign_up_floating_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/password"
        android:gravity="center"
        android:textSize="20sp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:background="@drawable/border_edittext"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/toggle_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/baseline_key_off_24"
        app:backgroundTint="#FFFFFF"
        tools:layout_editor_absoluteX="328dp"
        tools:layout_editor_absoluteY="379dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintRight_toRightOf="@id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.95"
        android:contentDescription="@string/show_password"
        android:onClick="toggle"/>


</androidx.constraintlayout.widget.ConstraintLayout>